fixing the input fields, color+ spacing them out

--- a/style.css
+++ b/style.css
@@ -28,6 +28,23 @@ section {
   background-color: rgb(245, 245, 245);
 }
 
+input, textarea {
+    width: 100%;
+    background-color: #242424;
+    color: #fff;
+    outline: none;
+    border: 1px solid #c0c4cc;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    height: 40px;
+}
+
+label {
+    font-size: 14px;
+    max-width: 1100px;
+}
+
 .container {
     padding: 50px 0;
     width: 100%;
@@ -310,6 +327,10 @@ nav {
 .modal__para {
     margin-bottom: 12px;
     line-height: 1.75;
+}
+
+.form__item {
+    margin-bottom: 20px;
 }
 
 /* 
